@@ -26,7 +26,6 @@ namespace Pds {
   public slots:
     void set_run_type(const QString&); // a run type has been selected
     void update      ();  // the latest key for the selected run type has changed
-    void run_scan    (int);
     void configured  (bool);
     void enable_scan (bool);
   private:
@@ -36,6 +35,7 @@ namespace Pds {
     Pds_ConfigDb::ControlScan* _scan;
     QComboBox*                 _runType;
     unsigned                   _run_key;
+    bool                       _scanIsActive;
   };
 };
 
